# lumalarm

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md
qml/: AlarmEditor.qml  AlarmListView.qml  ClockFace.qml  DualClockPicker.qml  GlassButton.qml  GlassCard.qml  GlassCheckBox.qml  RingingOverlay.qml  RoundedCombo.qml  SegmentedControl.qml  SettingsPage.qml  SoundManager.qml  StopwatchPage.qml  TimerPage.qml  ToggleSwitch.qml  UnifiedClockPicker.qml  WheelTimePicker.qml  main.qml
resources/: lumalarm.desktop
src/: AlarmManager.cpp  AlarmManager.h  AudioPlayer.cpp  AudioPlayer.h  BlurManager.cpp  BlurManager.h  ConfigManager.cpp  ConfigManager.h  Scheduler.cpp  Scheduler.h  ThemeManager.cpp  ThemeManager.h  WakeManager.cpp  WakeManager.h  main.cpp
